src/objects/DDP_Parameters__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Contains DDP Template Id and Deploy Id</description>
    <fields>
        <fullName>Credit_Agreement_DDP_Id__c</fullName>
        <label>Credit Agreement DDP Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Agreement_Deploy_ID__c</fullName>
        <label>Credit Agreement Deploy ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Agreement_Template_Name__c</fullName>
        <label>Credit Agreement Template Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Contract_Credit_Info_DDP_Id__c</fullName>
        <label>Pre Contract Credit Info DDP Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Contract_Credit_Info_Deploy_Id__c</fullName>
        <label>Pre Contract Credit Info Deploy Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Contract_Credit_Info_Template_Name__c</fullName>
        <label>Pre Contract Credit Info Template Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>DDP Parameters</label>
</CustomObject>